# BoringSsl.Net.CurlImpersonate

./: .gitignore  BoringSsl.Net.CurlImpersonate.Package.slnx  Directory.Build.props  Directory.Packages.props  README.md
.github/workflows/: ci.yml  publish-preview.yml
docs/: PRODUCTION_READINESS.md
native/curl_impersonate_shim/: CMakeLists.txt  curl_impersonate_shim.c
src/BoringSsl.Net.CurlImpersonate/: BoringSsl.Net.CurlImpersonate.csproj  README.md
src/BoringSsl.Net.CurlImpersonate/CurlImpersonate/: CurlImpersonateDefaults.cs  CurlImpersonateExecutorFactory.cs  CurlImpersonateForwarderHandler.cs  CurlImpersonateHeader.cs  CurlImpersonateHttpHandlerFactory.cs  CurlImpersonateProfilePolicy.cs  CurlImpersonateRequest.cs  CurlImpersonateResponse.cs  CurlImpersonateRuntime.cs  CurlImpersonateRuntimeStatus.cs  CurlImpersonateStreamingResponse.cs  CurlNativeLibraryLoader.cs  CurlResponseHeaderParser.cs  ICurlImpersonateExecutor.cs  ICurlImpersonateStreamingExecutor.cs  LibCurlImpersonateExecutor.cs
src/BoringSsl.Net.CurlImpersonate/Properties/: AssemblyInfo.cs
tests/BoringSsl.Net.CurlImpersonate.IntegrationTests/CurlImpersonate/: CurlIntegrationFactAttribute.cs  LibCurlImpersonateIntegrationTests.cs
tests/BoringSsl.Net.CurlImpersonate.UnitTests/: BoringSsl.Net.CurlImpersonate.UnitTests.csproj
tests/BoringSsl.Net.CurlImpersonate.UnitTests/CurlImpersonate/: CurlImpersonateForwarderHandlerTests.cs  CurlImpersonateRuntimeAndFactoryTests.cs  CurlResponseHeaderParserTests.cs
